--- a/angular-chat/package.json
+++ b/angular-chat/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "bootstrap": "^4.5.0",
     "firebase": "^7.13.1",
     "rxjs": "~6.5.5",
